register repo and webhook now working

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <nav>
-	<a href="{{ url_for('recycle') }}">RECYCLE</a>
+	<a href="{{ url_for('register') }}">REGISTER</a>
 	<a href="{{ url_for('build') }}">BUILD</a>
         <a href="{{ url_for('about') }}">About</a>
     </nav>
