--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
   <h3>Repo Register will connect a github repository</h3>
   <h3>To the SimpleBuildewr Application</h3>
   <h3>
-  <form class="form-inline" method="POST" action="{{ url_for('dorecycle') }}"> 
+  <form class="form-inline" method="POST" action="{{ url_for('register_post') }}"> 
   <div class="form-group">
     <div class="input-group">
         <span class="input-group-addon">Please git clone parameter (git@github.com:razrman/SimpleApp.git)</span>
