Added HRL pdf document

--- a/templates/about.html
+++ b/templates/about.html
@@ -4,4 +4,5 @@
     <h1>{% block title %} About {% endblock %}</h1>
     <h3>Simple Build Tools is a Flask web application written in Python.</h3>
     <h3>To run C Language Build commands in a controlled manner..</h3>
+    <p><a href="/buildserver/">Please refer to the HRL Document HERE</a></p>
 {% endblock %}
